This btn-group override prevents borders collapsing; can't see any good reason for that so nixed it.

--- a/paper/_bootswatch.scss
+++ b/paper/_bootswatch.scss
@@ -92,23 +92,6 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
   }
 }
 
-.btn-group {
-  .btn + .btn,
-  .btn + .btn-group,
-  .btn-group + .btn,
-  .btn-group + .btn-group {
-    margin-left: 0;
-  }
-
-  &-vertical {
-    > .btn + .btn,
-    > .btn + .btn-group,
-    > .btn-group + .btn,
-    > .btn-group + .btn-group {
-      margin-top: 0;
-    }
-  }
-}
 
 // Typography =================================================================
 
